--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.7",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "axios": "^1.5.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
@@ -31,6 +33,7 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "swiper": "^11.0.6"
   },
