--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@
 # DB_USERNAME=admin
 # DB_PASSWORD=admin
 # DB_PORT=8000
-NEXT_PUBLIC_API_URL=http://127.0.0.1:8000
+# NEXT_PUBLIC_API_URL=http://127.0.0.1:8000
+NEXT_PUBLIC_API_URL=https://grenaderka.pythonanywhere.com
 NEXT_APP_BASE_URL=http://localhost:3000
