--- a/.env
+++ b/.env
@@ -5,8 +5,5 @@
 # DB_PORT=8000
 # NEXT_PUBLIC_API_URL=http://127.0.0.1:8000
 NEXT_PUBLIC_API_URL=https://grenaderka.pythonanywhere.com
-# NEXT_APP_BASE_URL=http://localhost:3000
-
-
-NEXT_APP_BASE_URL=https://ksu-edu-proforientation.vercel.app/
+NEXT_PUBLIC_BASE_URL=https://ksu-edu-proforientation.vercel.app
 
