--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-imask": "^7.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-popper": "^2.3.0",
